fix code style, add Dockerfile